# GPU_GEM

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
imgui/: imgui_init.cpp  imgui_init.h
include/: application.h  debugUtils.h  mesh.h  meshes.h  model.h  renderer.h  shader.h  utils.h  windowHandler.h
shaders/triangle/: frag.glsl  vert.glsl
src/: application.cpp  imgui_init.cpp  meshes.cpp  model.cpp  renderer.cpp  shader.cpp  windowHandler.cpp  window_handler.cpp
test/: glfwWindow.cpp  main.cpp
